<resources>
    <string name="app_name">WhatsHelp</string>
    <string name="app_version">Version %s (%d)</string>
    <string name="action_send">Open Chat</string>
    <string name="hint_type_message">Message</string>
    <string name="hint_type_number">Mobile Number</string>
    <string name="title_history">History</string>
    <string name="title_history_container">Calls &amp; History</string>
    <string name="title_messages">Quick Messages</string>
    <string name="message_no_data">No data found!</string>
    <string name="message_copied_number">Number %s copied</string>
    <string name="action_use">Use</string>
    <string name="action_ignore">Ignore</string>
    <string name="error_no_whatsapp">%s is not Installed</string>
    <string name="error_invalid_number">Enter a valid number</string>
    <string name="error_no_data">Enter either Mobile Number or Message</string>
    <string name="action_share_link">Share Link</string>
    <string name="error_no_message">Enter the message</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="title_add_message">New Message</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_clear_history">Clear History</string>
    <string name="action_about">About</string>
    <string name="title_about">About</string>
    <string name="app_copyright">© %d–%d Vipin KT</string>
    <string name="app_disclaimer">Build with ♥️ in India</string>
    <string name="action_share">Share</string>
    <string name="action_feedback">Feedback</string>
    <string name="title_feedback">Feedback</string>
    <string name="label_feedback_type">Select Feedback Type</string>
    <string name="label_feedback_type_suggestion">Suggestion</string>
    <string name="label_feedback_feature_request">Feature Request</string>
    <string name="label_feedback_type_bug">Bug</string>
    <string name="hint_feedback">Enter your Feedback</string>
    <string name="hint_feedback_email">Enter your Mail id (optional)</string>
    <string name="action_submit">Submit</string>
    <string name="message_feedback_submit_success">Feedback submitted</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_share_app">Share App</string>
    <string name="message_share_app">Hey! Found an awesome app for sending messages to unknown number in
        WhatsApp. Its free and easy to use. Download the WhatsHelp app now!
        https://play.google.com/store/apps/details?id=%s</string>
    <string name="feedback_disclaimer">Your feedback matters, it helps us to serve you better.</string>
    <string name="action_switch_theme">Theme</string>
    <string name="action_theme_auto">System Default</string>
    <string name="action_theme_dark">Dark</string>
    <string name="action_theme_light">Light</string>
    <string name="title_call_logs">Call Logs</string>
    <string name="action_settings">Settings</string>
    <string name="action_permission_dialog_continue">Continue</string>
    <string name="action_permission_dialog_not_now">Not now</string>
    <string name="message_permission_call_history">To enable direct chat with unknown callers, allow WhatsHelp to access your Call logs.</string>
    <string name="message_permission_call_history_rationale">Click on Settings > Permissions > Call logs, and then Allow.</string>
    <string name="action_grant_permission">Grant Permission</string>
    <string name="title_grant_call_log_permission">Improve your messaging experience!</string>
    <string name="description_grant_call_log_permission">By allowing WhatsHelp to access your call logs, you can directly chat in WhatsApp with your unknown callers with out saving their number!</string>
    <string name="info_tap_to_select">Click on any number to select.</string>
    <string name="message_something_went_wrong">Something went wrong.</string>
    <string name="showcase_title_chat_number">Enter WhatsApp number here.</string>
    <string name="showcase_title_chat_message">Type your message here.</string>
    <string name="showcase_title_chat_app_change">Change chat app.</string>
    <string name="showcase_description_chat_number"><![CDATA[Click on the icon to view call logs & history!]]></string>
    <string name="showcase_description_chat_message">Click on the icon to use quick messages!</string>
    <string name="showcase_description_chat_app_change">Use \'WhatsApp\' or \'WhatsApp Business\' for sending messages!</string>
</resources>