<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/action_share_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_switch_theme"
        android:title="@string/action_switch_theme"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_theme_auto"
                android:title="@string/action_theme_auto"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_theme_light"
                android:title="@string/action_theme_light"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_theme_dark"
                android:title="@string/action_theme_dark"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>