<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.whatshelp.data.model.FeedbackType" />

        <variable
            name="viewModel"
            type="com.whatshelp.ui.feedback.FeedbackViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.feedback.FeedbackFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="24dp"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_feedback_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_feedback_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_feedback_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_feedback_type">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_type_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.feedbackType.equals(FeedbackType.SUGGESTION)}"
                    android:onClick="@{()->viewModel.setFeedbackType(FeedbackType.SUGGESTION)}"
                    android:text="@string/label_feedback_type_suggestion" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_type_bug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.feedbackType.equals(FeedbackType.BUG)}"
                    android:onClick="@{()->viewModel.setFeedbackType(FeedbackType.BUG)}"
                    android:text="@string/label_feedback_type_bug" />
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hint_feedback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_feedback_type" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_feedback">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:fadeScrollbars="false"
                    android:minLines="5"
                    android:scrollbars="vertical"
                    android:text="@={viewModel.feedback}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.enableSubmission}"
                android:onClick="@{()->viewModel.submitFeedback()}"
                android:text="@string/action_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>